 - input: removed GLFW input implementation
 - gui: added a pure SFML implementation for the rendering
 - gui: added a pure SDL implementation for the rendering
 - gui: added a faster OpenGL 3 implementation, alternative to fixed pipeline legacy OpenGL
 - gui: added documentation for the Lua API
 - gui: added support for high-DPI systems using a global scaling factor (with hints from OS)

Other changes:
 - general: various fixes and improvements to the build system
 - general: fixed various warnings and minor bugs detected by clang
 - general: moved away from using reference-counted smart pointers whenever possible
 - general: moved all code into the lxgui namespace
 - general: exceptions now inherit from std::exception
 - general: moved all enums to C++11 enum class
 - general: added C++11 noexcept specifiers where appropriate
 - general: removed foreach() macro in favor of C++11 range-based for loop
 - general: use override instead of virtual whenever applicable
 - general: made all single argument constructors explicit where appropriate
 - general: removed lua::var (custom std::any) and added utils::variant (using std::variant)
 - general: renamed "sensibility" to "sensitivity"
 - general: renamed "overed" to "hovered"
 - general: now using non-static data member initialisers whenever possible
 - utils: removed broken custom code for UTF8-UTF32 conversion and use a library instead
 - lua: added support for Lua versions later than 5.1
 - lua: removed unusual constructs to serialize a table
 - lua: starting switching to sol2 to manage the Lua state
 - input: simplified class hierarchy by merging handler+handler_impl into input::source
 - input: vastly improved performance of SFML input implementation
 - input: get_key_name() is now platform-independent, and only returns English
 - input: added set_mouse_cursor() and reset_mouse_cursor()
 - input: added get_interface_scaling_factor_hint()
 - input: added set_interface_scaling_factor()