@@ -12,6 +12,12 @@ Major changes:
  - gui: added a faster OpenGL 3 implementation, alternative to fixed pipeline legacy OpenGL
  - gui: added documentation for the Lua API
  - gui: added support for high-DPI systems using a global scaling factor (with hints from OS)
+ - gui: the order in which widgets are created from XML is now tightly specified. For any frame:
+    - the frame itself is created (without any of its regions or children)
+    - the special regions are parsed (e.g., slider thumb texture, button texture, etc.)
+    - the regions are created, in order of declaration in the XML file
+    - the special frames are parsed (e.g., scroll child)
+    - the children frames are created, in order of declaration in the XML file
 
 Other changes:
  - general: various fixes and improvements to the build system
